home and about pages finish

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,71 +12,84 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Liquor Store</title>
 </head>
+
 <body>
- <!--              HEADER START               -->
+    <!--              HEADER START               -->
 
- <header>
-    <section id="header_area">
-        <div class="container">
-            <div class="header-box">
-                <div class="number">
-                    <div class="telephone-box">
-                        <i class="bi bi-telephone"></i>
-                        <p>+00 1234 567</p>
+    <header>
+        <section id="header_area">
+            <div class="container">
+                <div class="header-box">
+                    <div class="number">
+                        <div class="telephone-box">
+                            <i class="bi bi-telephone"></i>
+                            <p>+00 1234 567</p>
+                        </div>
+                        <div class="email-box">
+                            <i class="bi bi-send"></i>
+                            <p>youremail@email.com</p>
+                        </div>
                     </div>
-                    <div class="email-box">
-                        <i class="bi bi-send"></i>
-                        <p>youremail@email.com</p>
-                    </div>
-                </div>
 
-                <div class="social">
-                    <div class="header-icon">
-                        <i class="bi bi-facebook"></i>
-                        <i class="bi bi-twitter"></i>
-                        <i class="bi bi-instagram"></i>
-                        <i class="bi bi-whatsapp"></i>
-                    </div>
-                    <div class="header-link">
-                        <a href="">sign up</a>
-                        <a href="">log in</a>
+                    <div class="social">
+                        <div class="header-icon">
+                            <i class="bi bi-facebook"></i>
+                            <i class="bi bi-twitter"></i>
+                            <i class="bi bi-instagram"></i>
+                            <i class="bi bi-whatsapp"></i>
+                        </div>
+                        <div class="header-link">
+                            <a href="">sign up</a>
+                            <a href="">log in</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
 
-    <section id="nav_area">
-        <div class="container">
-            <div class="nav-box">
-                <h1>liquor store</h1>
-                <div class="nav-list">
-                    <ul>
-                        <li><a href="./index.html">home</a></li>
-                        <li><a href="/about.html">about</a></li>
-                        <li>
-                            <form action="">
-                                <select name="" id="">
-                                    <option value="" disabled selected>products</option>
-                                    <option value=""><a href="">Single Product</a></option>
-                                </select>
-                            </form>
-                        </li>
-                        <li><a href="">blog</a></li>
-                        <li><a href="">contact</a></li>
-                        <li><a href="">cart</a></li>
-                    </ul>
+        <section id="nav_area">
+            <div class="container">
+                <div class="nav-box">
+                    <h1>liquor store</h1>
+                    <div class="nav-list">
+                        <ul>
+                            <li><a href="./index.html">home</a></li>
+                            <li><a href="/about.html">about</a></li>
+                            <li>
+                                <form action="">
+                                    <select name="" id="">
+                                        <option value="" disabled selected>products</option>
+                                        <option value=""><a href="">Single Product</a></option>
+                                    </select>
+                                </form>
+                            </li>
+                            <li><a href="">blog</a></li>
+                            <li><a href="">contact</a></li>
+                            <li><a href="">cart</a></li>
+                        </ul>
+                    </div>
+                    <i class="bi bi-list"></i>
                 </div>
-                <i class="bi bi-list"></i>
             </div>
-        </div>
-    </section>
-</header>
-<!--              HEADER END                 -->
+        </section>
+    </header>
+    <!--              HEADER END                 -->
 
-<!--              MAIN START                 -->
+    <!--              MAIN START                 -->
     <main>
+
+        <section id="hero">
+            <div class="container" data-aos="fade-up">
+                <div class="hero-text">
+                    <h2>Home About Us</h2>
+                    <h1>About Us</h1>
+                </div>
+            </div>
+        </section>
+
+
+
         <section id="online">
             <div class="container" data-aos="fade-up">
                 <div class="row">
@@ -281,7 +295,7 @@
                                 <div class="quote"><i class="bi bi-quote"></i></div>
                             </div>
                         </div>
-                  
+
 
                         <div class="pagination">
                             <div class="circle"></div>
@@ -290,17 +304,150 @@
                             <div class="circle"></div>
                             <div class="circle"></div>
                         </div>
-                  
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section id="statica">
+            <div class="container" data-aos="fade-up">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="card-number">
+                                <h1>3,000</h1>
+                            </div>
+                            <div class="card-text">
+                                <h2>
+                                    Our Satisfied Customers
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="card-number">
+                                <h1>115</h1>
+                            </div>
+                            <div class="card-text">
+                                <h2>
+                                    Years of Experience
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="card-number">
+                                <h1>100</h1>
+                            </div>
+                            <div class="card-text">
+                                <h2>
+                                    Kinds of Liquor
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="card-number">
+                                <h1>40</h1>
+                            </div>
+                            <div class="card-text">
+                                <h2>
+                                    Our Branches
+                                </h2>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
     </main>
-<!--              MAIN END                   -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-    AOS.init();
-</script>
+    <!--              MAIN END                   -->
+    <!--              FOOTER START               -->
+    <footer>
+        <section id="footer_area">
+            <div class="container">
+                <div class="footer-boxs">
+                    <div class="box1">
+                        <h1>Liquor Store</h1>
+                        <p>Far far away, behind the word mountains, far from the countries.</p>
+                        <div class="footer-social">
+                            <div class="social1">
+                                <i class="bi bi-twitter"></i>
+                            </div>
+                            <div class="social2">
+                                <i class="bi bi-facebook"></i>
+                            </div>
+                            <div class="social3">
+                                <i class="bi bi-instagram"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box2">
+                        <h1>My Accounts</h1>
+                        <ul>
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">Register</a></li>
+                            <li><a href="#">Log in</a></li>
+                            <li><a href="#">My Order</a></li>
+                        </ul>
+                    </div>
+                    <div class="box3">
+                        <h1>Information</h1>
+                        <ul>
+                            <li><a href="#">About us</a></li>
+                            <li><a href="#">Catalog</a></li>
+                            <li><a href="#">Contact us</a></li>
+                            <li><a href="#">Term & Conditions</a></li>
+                        </ul>
+                    </div>
+                    <div class="box4">
+                        <h1>Quick Link</h1>
+                        <ul>
+                            <li><a href="#">New User</a></li>
+                            <li><a href="#">Help Center</a></li>
+                            <li><a href="#">Report Spam</a></li>
+                            <li><a href="#">Faq's</a></li>
+                        </ul>
+                    </div>
+                    <div class="box5">
+                        <h1>Have a Questions?</h1>
+                        <div class="map">
+                            <i class="bi bi-map"></i>
+                            <p> 203 Fake St. Mountain View, San Francisco, California, USA</p>
+                        </div>
+                        <div class="telephone">
+                            <i class="bi bi-telephone-fill"></i>
+                            <p>+2 392 3929 210</p>
+                        </div>
+                        <div class="send">
+                            <i class="bi bi-send"></i>
+                            <p>info@yourdomain.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="copyright">
+            <div class="container">
+                <span>Copyright ©2025 All rights reserved | This template is made with by Colorlib.com</span>
+            </div>
+        </section>
+    </footer>
+    <!--               FOOTER END                -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
+
 </html>
