--- a/index.html
+++ b/index.html
@@ -513,6 +513,17 @@
                                 <div class="box1">
                                     <h1>Liquor Store</h1>
                                     <p>Far far away, behind the word mountains, far from the countries.</p>
+                                    <div class="footer-social">
+                                        <div class="social1">
+                                            <i class="bi bi-twitter"></i>
+                                        </div>
+                                        <div class="social2">
+                                            <i class="bi bi-facebook"></i>
+                                        </div>
+                                        <div class="social3">
+                                            <i class="bi bi-instagram"></i>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="box2">
                                     <h1>My Accounts</h1>
@@ -543,9 +554,26 @@
                                 </div>
                                 <div class="box5">
                                     <h1>Have a Questions?</h1>
-                                    
+                                    <div class="map">
+                                        <i class="bi bi-map"></i>
+                                        <p>	203 Fake St. Mountain View, San Francisco, California, USA</p>
+                                    </div>
+                                    <div class="telephone">
+                                        <i class="bi bi-telephone-fill"></i>
+                                        <p>+2 392 3929 210</p>
+                                    </div>
+                                    <div class="send">
+                                        <i class="bi bi-send"></i>
+                                        <p>info@yourdomain.com</p>
+                                    </div>
                                 </div>
                             </div>
+                        </div>
+                    </section>
+
+                    <section id="copyright">
+                        <div class="container">
+                            <span>Copyright ©2025 All rights reserved | This template is made with  by Colorlib.com</span>
                         </div>
                     </section>
                   </footer>
