--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                                     </select>
                                 </form>
                             </li>
-                            <li><a href="">blog</a></li>
+                            <li><a href="/blog.html">blog</a></li>
                             <li><a href="">contact</a></li>
                             <li><a href="">cart</a></li>
                         </ul>
@@ -371,6 +371,8 @@
 
     </main>
     <!--              MAIN END                   -->
+
+    
     <!--              FOOTER START               -->
     <footer>
         <section id="footer_area">
