--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/blog.css">
+    <link rel="stylesheet" href="./assets/css/contact.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Liquor Store</title>
 </head>
+
 <body>
     <!--              HEADER START               -->
 
@@ -74,135 +76,79 @@
     </header>
     <!--              HEADER END                 -->
 
-     <!--              MAIN START                 -->
-     <main>
+    <!--              MAIN START                 -->
+    <main>
 
         <section id="hero">
             <div class="container" data-aos="fade-up">
                 <div class="hero-text">
-                    <h2>Home Blog</h2>
-                    <h1>Blog</h1>
+                    <h2>Home Contact Us</h2>
+                    <h1>Contact Us</h1>
                 </div>
             </div>
         </section>
 
 
-        <section id="recent">
-            <div class="container" data-aos="fade-up">
+        <section id="contact-us">
+            <div class="container">
                 <div class="row">
 
-                    <div class="col-lg-6 col-md-6 col-sm-12">
+
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
-                            <div class="image"><img src="./assets/images/image_1.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
+                            <div class="card-icon"><i class="bi bi-geo-alt"></i></div>
+                            <div class="card-text">Address: 198 West 21th Street, Suite 721 New York NY 10016</div>
                         </div>
                     </div>
 
-                    <div class="col-lg-6 col-md-6 col-sm-12">
+
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
-                            <div class="image"><img src="./assets/images/image_2.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
+                            <div class="card-icon"><i class="bi bi-telephone-fill"></i></div>
+                            <div class="card-text">Phone: + 1235 2355 98</div>
                         </div>
                     </div>
 
-                    <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
-                            <div class="image"><img src="./assets/images/image_3.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
+                            <div class="card-icon"><i class="bi bi-send"></i></div>
+                            <div class="card-text">Email: info@yoursite.com</div>
                         </div>
                     </div>
 
-                    <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="card">
-                            <div class="image"><img src="./assets/images/image_4.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
+                            <div class="card-icon"><i class="bi bi-globe-americas"></i></div>
+                            <div class="card-text">Website yoursite.com</div>
                         </div>
                     </div>
 
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="image"><img src="./assets/images/image_5.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="image"><img src="./assets/images/image_6.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
-                        </div>
-                    </div>
-                     <div class="blog-pagination">
-                        <div class="box1"><i class="bi bi-caret-left"></i></div>
-                        <div class="box2">1</div>
-                        <div class="box3">2</div>
-                        <div class="box4">3</div>
-                        <div class="box5">4</div>
-                        <div class="box6">5</div>
-                        <div class="box7"><i class="bi bi-caret-right"></i></div>
-                     </div>
                 </div>
+            </div>
         </section>
 
+        <section id="contact_area">
+            <div class="container">
+                <div class="contact-box">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.4284905029954!2d49.85137057514767!3d40.377194958046054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40307d079efb5163%3A0xc20aa51a5f0b5e01!2sCode%20Academy!5e0!3m2!1saz!2saz!4v1742850161773!5m2!1saz!2saz"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <div class="contact-form">
+                            <h1>Contact Us</h1>
+                            <form action="">
+                                <label for="">full name</label>
+                                <input type="text">
+                            </form>
+                        </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!--              MAIN END                   -->
 
-     <!--              FOOTER START               -->
-     <footer>
+    <!--              FOOTER START               -->
+    <footer>
         <section id="footer_area">
             <div class="container">
                 <div class="footer-boxs">
@@ -279,4 +225,5 @@
         AOS.init();
     </script>
 </body>
+
 </html>
