--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 </form>
                             </li>
                             <li><a href="/blog.html">blog</a></li>
-                            <li><a href="">contact</a></li>
+                            <li><a href="/contact.html">contact</a></li>
                             <li><a href="">cart</a></li>
                         </ul>
                     </div>
