contact page finish

--- a/contact.html
+++ b/contact.html
@@ -136,10 +136,32 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <div class="contact-form">
                             <h1>Contact Us</h1>
+                           <div class="form-box">
                             <form action="">
-                                <label for="">full name</label>
-                                <input type="text">
+                              
+                             <div class="twoform-box">
+                                <div class="name-box">
+                                    <label for="">full name</label>
+                                    <input type="text" placeholder="Name">
+                                   </div>
+                                   <div class="email-box">
+                                    <label for="">email adress</label>
+                                    <input type="email" placeholder="Email">
+                                   </div>
+                             </div>
+
+                            <div class="subject-box">
+                                <label for="">subject</label>
+                                <input type="text" placeholder="Subject">
+                            </div>
+
+                            <div class="textarea-box">
+                                <label for="">message</label>
+                                <textarea name="" id="" style="resize: none;" placeholder="Message"></textarea>
+                            </div>
+                             
                             </form>
+                           </div>
                         </div>
                 </div>
             </div>
