register and login page finish

--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
                             <i class="bi bi-whatsapp"></i>
                         </div>
                         <div class="header-link">
-                            <a href="">sign up</a>
-                            <a href="">log in</a>
+                            <a href="/register.html">sign up</a>
+                            <a href="/login.html">log in</a>
                         </div>
                     </div>
                 </div>
@@ -161,6 +161,7 @@
                             </div>
                              
                             </form>
+                            <button><span>Send Message</span></button>
                            </div>
                         </div>
                 </div>
