--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/blog.css">
+    <link rel="stylesheet" href="./assets/css/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -12,9 +12,10 @@
     <title>Liquor Store</title>
 </head>
 <body>
-    <!--              HEADER START               -->
 
-    <header>
+      <!--              HEADER START               -->
+
+      <header>
         <section id="header_area">
             <div class="container">
                 <div class="header-box">
@@ -38,7 +39,7 @@
                         </div>
                         <div class="header-link">
                             <a href="/register.html">sign up</a>
-                            <a href="/login.html">log in</a>
+                            <a href="">log in</a>
                         </div>
                     </div>
                 </div>
@@ -52,7 +53,7 @@
                     <h1>liquor store</h1>
                     <div class="nav-list">
                         <ul>
-                            <li><a href="./index.html">home</a></li>
+                            <li><a href="/index.html">home</a></li>
                             <li><a href="/about.html">about</a></li>
                             <li>
                                 <form action="">
@@ -74,130 +75,35 @@
     </header>
     <!--              HEADER END                 -->
 
-     <!--              MAIN START                 -->
-     <main>
+
+    <!--              MAIN START                 -->
+    <main>
 
         <section id="hero">
             <div class="container" data-aos="fade-up">
                 <div class="hero-text">
-                    <h2>Home Blog</h2>
-                    <h1>Blog</h1>
+                    <h2>Home Login</h2>
+                    <h1>Login</h1>
                 </div>
             </div>
         </section>
 
 
-        <section id="recent">
-            <div class="container" data-aos="fade-up">
-                <div class="row">
-
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="image"><img src="./assets/images/image_1.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="image"><img src="./assets/images/image_2.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="image"><img src="./assets/images/image_3.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="image"><img src="./assets/images/image_4.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="image"><img src="./assets/images/image_5.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="card">
-                            <div class="image"><img src="./assets/images/image_6.jpg" alt=""></div>
-                            <div class="card-text">
-                                <div class="date">
-                                    <i class="bi bi-calendar"></i>
-                                    <p>23 April 2020</p>
-                                </div>
-                                <h1>The Recipe from a Winemaker’s Restaurent</h1>
-                                <p>A small river named Duden flows by their place and supplies it with the necessary
-                                    regelialia.</p>
-                                    <a href="#">Continue </a>
-                            </div>
-                        </div>
-                    </div>
-                     <div class="blog-pagination">
-                        <div class="box1"><i class="bi bi-caret-left"></i></div>
-                        <div class="box2">1</div>
-                        <div class="box3">2</div>
-                        <div class="box4">3</div>
-                        <div class="box5">4</div>
-                        <div class="box6">5</div>
-                        <div class="box7"><i class="bi bi-caret-right"></i></div>
-                     </div>
+        <section id="register_form">
+            <div class="container">
+                <div class="form-box">
+                   <form action="">
+                    <label for="">name</label>
+                    <input type="text" placeholder="Name">
+                    <label for="">email</label>
+                    <input type="email" placeholder="Email">
+                    <label for="">password</label>
+                    <input type="password" placeholder="Password">
+                   </form>
+                   <button><span>Log in</span></button>
                 </div>
+            </div>
         </section>
-
     </main>
     <!--              MAIN END                   -->
 
