product page start

--- a/index.html
+++ b/index.html
@@ -56,13 +56,7 @@
                         <ul>
                             <li><a href="/index.html">home</a></li>
                             <li><a href="/about.html">about</a></li>
-                            <li>
-                                <form action="">
-                                    <select name="" id="">
-                                        <option value="" disabled selected>products</option>
-                                        <option value=""><a href="">Single Product</a></option>
-                                    </select>
-                                </form>
+                            <li><a href="/products.html">products</a>
                             </li>
                             <li><a href="/blog.html">blog</a></li>
                             <li><a href="/contact.html">contact</a></li>
@@ -447,7 +441,7 @@
                                 <h1>The Recipe from a Winemaker’s Restaurent</h1>
                                 <p>A small river named Duden flows by their place and supplies it with the necessary
                                     regelialia.</p>
-                                    <a href="#">Continue </a>
+                                <a href="#">Continue </a>
                             </div>
                         </div>
                     </div>
@@ -463,7 +457,7 @@
                                 <h1>The Recipe from a Winemaker’s Restaurent</h1>
                                 <p>A small river named Duden flows by their place and supplies it with the necessary
                                     regelialia.</p>
-                                    <a href="#">Continue </a>
+                                <a href="#">Continue </a>
                             </div>
                         </div>
                     </div>
@@ -479,7 +473,7 @@
                                 <h1>The Recipe from a Winemaker’s Restaurent</h1>
                                 <p>A small river named Duden flows by their place and supplies it with the necessary
                                     regelialia.</p>
-                                    <a href="#">Continue </a>
+                                <a href="#">Continue </a>
                             </div>
                         </div>
                     </div>
@@ -495,7 +489,7 @@
                                 <h1>The Recipe from a Winemaker’s Restaurent</h1>
                                 <p>A small river named Duden flows by their place and supplies it with the necessary
                                     regelialia.</p>
-                                    <a href="#">Continue </a>
+                                <a href="#">Continue </a>
                             </div>
                         </div>
                     </div>
@@ -506,82 +500,85 @@
     <!--              MAIN END                   -->
 
     <!--              FOOTER START               -->
-                  <footer>
-                    <section id="footer_area">
-                        <div class="container">
-                            <div class="footer-boxs">
-                                <div class="box1">
-                                    <h1>Liquor Store</h1>
-                                    <p>Far far away, behind the word mountains, far from the countries.</p>
-                                    <div class="footer-social">
-                                        <div class="social1">
-                                            <i class="bi bi-twitter"></i>
-                                        </div>
-                                        <div class="social2">
-                                            <i class="bi bi-facebook"></i>
-                                        </div>
-                                        <div class="social3">
-                                            <i class="bi bi-instagram"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="box2">
-                                    <h1>My Accounts</h1>
-                                    <ul>
-                                        <li><a href="#">My Account</a></li>
-                                        <li><a href="#">Register</a></li>
-                                        <li><a href="#">Log in</a></li>
-                                        <li><a href="#">My Order</a></li>
-                                    </ul>
-                                </div>
-                                <div class="box3">
-                                    <h1>Information</h1>
-                                    <ul>
-                                        <li><a href="#">About us</a></li>
-                                        <li><a href="#">Catalog</a></li>
-                                        <li><a href="#">Contact us</a></li>
-                                        <li><a href="#">Term & Conditions</a></li>
-                                    </ul>
-                                </div>
-                                <div class="box4">
-                                    <h1>Quick Link</h1>
-                                    <ul>
-                                        <li><a href="#">New User</a></li>
-                                        <li><a href="#">Help Center</a></li>
-                                        <li><a href="#">Report Spam</a></li>
-                                        <li><a href="#">Faq's</a></li>
-                                    </ul>
-                                </div>
-                                <div class="box5">
-                                    <h1>Have a Questions?</h1>
-                                    <div class="map">
-                                        <i class="bi bi-map"></i>
-                                        <p>	203 Fake St. Mountain View, San Francisco, California, USA</p>
-                                    </div>
-                                    <div class="telephone">
-                                        <i class="bi bi-telephone-fill"></i>
-                                        <p>+2 392 3929 210</p>
-                                    </div>
-                                    <div class="send">
-                                        <i class="bi bi-send"></i>
-                                        <p>info@yourdomain.com</p>
-                                    </div>
-                                </div>
+    <footer>
+        <section id="footer_area">
+            <div class="container">
+                <div class="footer-boxs">
+                    <div class="box1">
+                        <h1>Liquor Store</h1>
+                        <p>Far far away, behind the word mountains, far from the countries.</p>
+                        <div class="footer-social">
+                            <div class="social1">
+                                <i class="bi bi-twitter"></i>
+                            </div>
+                            <div class="social2">
+                                <i class="bi bi-facebook"></i>
+                            </div>
+                            <div class="social3">
+                                <i class="bi bi-instagram"></i>
                             </div>
                         </div>
-                    </section>
-
-                    <section id="copyright">
-                        <div class="container">
-                            <span>Copyright ©2025 All rights reserved | This template is made with  by Colorlib.com</span>
+                    </div>
+                    <div class="box2">
+                        <h1>My Accounts</h1>
+                        <ul>
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">Register</a></li>
+                            <li><a href="#">Log in</a></li>
+                            <li><a href="#">My Order</a></li>
+                        </ul>
+                    </div>
+                    <div class="box3">
+                        <h1>Information</h1>
+                        <ul>
+                            <li><a href="#">About us</a></li>
+                            <li><a href="#">Catalog</a></li>
+                            <li><a href="#">Contact us</a></li>
+                            <li><a href="#">Term & Conditions</a></li>
+                        </ul>
+                    </div>
+                    <div class="box4">
+                        <h1>Quick Link</h1>
+                        <ul>
+                            <li><a href="#">New User</a></li>
+                            <li><a href="#">Help Center</a></li>
+                            <li><a href="#">Report Spam</a></li>
+                            <li><a href="#">Faq's</a></li>
+                        </ul>
+                    </div>
+                    <div class="box5">
+                        <h1>Have a Questions?</h1>
+                        <div class="map">
+                            <i class="bi bi-map"></i>
+                            <p> 203 Fake St. Mountain View, San Francisco, California, USA</p>
                         </div>
-                    </section>
-                  </footer>
+                        <div class="telephone">
+                            <i class="bi bi-telephone-fill"></i>
+                            <p>+2 392 3929 210</p>
+                        </div>
+                        <div class="send">
+                            <i class="bi bi-send"></i>
+                            <p>info@yourdomain.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="copyright">
+            <div class="container">
+                <span>Copyright ©2025 All rights reserved | This template is made with by Colorlib.com</span>
+            </div>
+        </section>
+    </footer>
     <!--               FOOTER END                -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
