--- a/register.html
+++ b/register.html
@@ -55,14 +55,7 @@
                         <ul>
                             <li><a href="/index.html">home</a></li>
                             <li><a href="/about.html">about</a></li>
-                            <li>
-                                <form action="">
-                                    <select name="" id="">
-                                        <option value="" disabled selected>products</option>
-                                        <option value=""><a href="">Single Product</a></option>
-                                    </select>
-                                </form>
-                            </li>
+                            <li><a href="/products.html">products</a>
                             <li><a href="/blog.html">blog</a></li>
                             <li><a href="/contact.html">contact</a></li>
                             <li><a href="">cart</a></li>
