products page finish

--- a/products.html
+++ b/products.html
@@ -82,9 +82,9 @@
         </section>
 
         <section id="products_area">
-            <div class="container">
+            <div class="container" data-aos="fade-up">
                 <div class="row">
-                    <!-- <button style="width: 10rem; height: 10rem; margin-top: 2rem;">dsvfd</button> -->
+                    <button><a href="/singleproduct.html">Single Product</a></button>
                     <div class="filter-card">
 
 
@@ -276,6 +276,16 @@
                                     </div>
                                 </div>
 
+                                <div class="blog-pagination">
+                                    <div class="box1"><i class="bi bi-caret-left"></i></div>
+                                    <div class="box2">1</div>
+                                    <div class="box3">2</div>
+                                    <div class="box4">3</div>
+                                    <div class="box5">4</div>
+                                    <div class="box6">5</div>
+                                    <div class="box7"><i class="bi bi-caret-right"></i></div>
+                                 </div>
+
                             </div>
 
                         </div>
@@ -291,6 +301,42 @@
                                 <a href="">Tequila</a>
                                 <a href="">Vodka</a>
                                 <a href="">Whiskey</a>
+                            </div>
+
+                            <div class="blog">
+                                <h1>Recent Blog</h1>
+                                <div class="blog-card">
+                                    <div class="card-text">
+                                    <div class="image"><img src="/assets/images/image_1.jpg" alt=""></div>
+                                    <a href="">Even the all-powerful Pointing has no control
+                                            about th blind texts</a></div>
+                                            <div class="date">
+                                                <div class="calendar"><i class="bi bi-calendar"></i><p class="year">Apr.18 ,2020</p></div>
+                                                <div class="message"><i class="bi bi-chat-fill"></i><p class="year">19</p></div>
+                                            </div>
+                                </div>
+
+                                <div class="blog-card">
+                                    <div class="card-text">
+                                    <div class="image"><img src="/assets/images/image_2.jpg" alt=""></div>
+                                    <a href="">Even the all-powerful Pointing has no control
+                                            about th blind texts</a></div>
+                                            <div class="date">
+                                                <div class="calendar"><i class="bi bi-calendar"></i><p class="year">Apr.18 ,2020</p></div>
+                                                <div class="message"><i class="bi bi-chat-fill"></i><p class="year">19</p></div>
+                                            </div>
+                                </div>
+
+                                <div class="blog-card">
+                                    <div class="card-text">
+                                    <div class="image"><img src="/assets/images/image_3.jpg" alt=""></div>
+                                    <a href="">Even the all-powerful Pointing has no control
+                                            about th blind texts</a></div>
+                                            <div class="date">
+                                                <div class="calendar"><i class="bi bi-calendar"></i><p class="year">Apr.18 ,2020</p></div>
+                                                <div class="message"><i class="bi bi-chat-fill"></i><p class="year">19</p></div>
+                                            </div>
+                                </div>
                             </div>
                         </div>
                     </div>
