--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             </li>
                             <li><a href="/blog.html">blog</a></li>
                             <li><a href="/contact.html">contact</a></li>
-                            <li><a href="">cart</a></li>
+                            <li><a href="/cart.html">cart</a></li>
                         </ul>
                     </div>
                     <i class="bi bi-list"></i>
