--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="header-link">
                             <a href="/register.html">sign up</a>
-                            <a href="">log in</a>
+                            <a href="/login.html">log in</a>
                         </div>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                             <li><a href="/products.html">products</a>
                             <li><a href="/blog.html">blog</a></li>
                             <li><a href="/contact.html">contact</a></li>
-                            <li><a href="">cart</a></li>
+                            <li><a href="/cart.html">cart</a></li>
                         </ul>
                     </div>
                     <i class="bi bi-list"></i>
