--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
                             <li><a href="/products.html">products</a>
                             <li><a href="/blog.html">blog</a></li>
                             <li><a href="/contact.html">contact</a></li>
-                            <li><a href="">cart</a></li>
+                            <li><a href="/cart.html">cart</a></li>
                         </ul>
                     </div>
                     <i class="bi bi-list"></i>
@@ -82,6 +82,7 @@
 
         <section id="recent">
             <div class="container" data-aos="fade-up">
+                <button class="single-blog"><a href="/singleblog.html">Single Blog</a></button>
                 <div class="row">
 
                     <div class="col-lg-6 col-md-6 col-sm-12">
