--- a/cart.html
+++ b/cart.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/singleproduct.css">
+    <link rel="stylesheet" href="./assets/css/cart.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Liquor Store</title>
 </head>
-
 <body>
-    <!--              HEADER START               -->
+       <!--              HEADER START               -->
 
-    <header>
+       <header>
         <section id="header_area">
             <div class="container">
                 <div class="header-box">
@@ -54,7 +52,7 @@
                     <h1>liquor store</h1>
                     <div class="nav-list">
                         <ul>
-                            <li><a href="/index.html">home</a></li>
+                            <li><a href="./index.html">home</a></li>
                             <li><a href="/about.html">about</a></li>
                             <li><a href="/products.html">products</a>
                             <li><a href="/blog.html">blog</a></li>
@@ -69,86 +67,113 @@
     </header>
     <!--              HEADER END                 -->
 
-    <!--              MAIN START                 -->
-    <main>
+     <!--              MAIN START                 -->
+     <main>
 
         <section id="hero">
             <div class="container" data-aos="fade-up">
                 <div class="hero-text">
-                    <h2>Home Products Products Single</h2>
-                    <h1>Products Single</h1>
+                    <h2>Home Cart</h2>
+                    <h1>My Cart</h1>
                 </div>
             </div>
         </section>
 
+        <section id="cart_table">
+           <div class="container">
+            <table>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th>Product</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Total</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <td><input type="checkbox"></td>
+                    <td><div class="image"><img src="./assets/images/prod-1.jpg" alt=""></div></td>
+                    <td>Jim Beam Kentucky Straight<br>
+                        Fugiat voluptates quasi nemo, ipsa perferendis</td>
+                    <td>$44.99</td>
+                    <td>2</td>
+                    <td>$89.98</td>
+                    <td><i class="bi bi-x-lg"></i></td>
+                </tr>
+                <tr>
+                    <td><input type="checkbox"></td>
+                    <td><div class="image"><img src="./assets/images/prod-2.jpg" alt=""></div></td>
+                    <td>Jim Beam Kentucky Straight<br>
+                        Fugiat voluptates quasi nemo, ipsa perferendis</td>
+                    <td>$30.99</td>
+                    <td>1</td>
+                    <td>$30.99</td>
+                    <td><i class="bi bi-x-lg"></i></td>
+                </tr>
+                <tr>
+                    <td><input type="checkbox"></td>
+                    <td><div class="image"><img src="./assets/images/prod-3.jpg" alt=""></div></td>
+                    <td>Jim Beam Kentucky Straight<br>
+                        Fugiat voluptates quasi nemo, ipsa perferendis</td>
+                    <td>$35.50</td>
+                    <td>1</td>
+                    <td>$35.50</td>
+                    <td><i class="bi bi-x-lg"></i></td>
+                </tr>
+                <tr>
+                    <td><input type="checkbox"></td>
+                    <td><div class="image"><img src="./assets/images/prod-4.jpg" alt=""></div></td>
+                    <td>Jim Beam Kentucky Straight<br>
+                        Fugiat voluptates quasi nemo, ipsa perferendis</td>
+                    <td>$76.99</td>
+                    <td>1</td>
+                    <td>$76.99</td>
+                    <td><i class="bi bi-x-lg"></i></td>
+                </tr>
+                <tr>
+                    <td><input type="checkbox"></td>
+                    <td><div class="image"><img src="./assets/images/prod-5.jpg" alt=""></div></td>
+                    <td>Jim Beam Kentucky Straight<br>
+                        Fugiat voluptates quasi nemo, ipsa perferendis</td>
+                    <td>$40.00</td>
+                    <td>1</td>
+                    <td>$40.00</td>
+                    <td><i class="bi bi-x-lg"></i></td>
+                </tr>
+            </table>
 
-        <section id="single_product">
-            <div class="container">
-                <div class="one-product">
-                    <div class="image"><img src="/assets/images/prod-1.jpg" alt=""></div>
-                    <div class="product-text">
-                        <h1>Bacardi 151 Degree</h1>
-                        <div class="rating">
-                            <p>5.0</p>
-                            <div class="star">
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                                <i class="bi bi-star-fill"></i>
-                            </div>
-                            <p>100 Rating</p>
-                            <p>500 Sold</p>
-                        </div>
-                        <h1>$120.00</h1>
-                        <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.
-                            It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                        <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it
-                            would have been rewritten a thousand times and everything that was left from its origin
-                            would be the word "and" and the Little Blind Text should turn around and return to its own,
-                            safe country. But nothing the copy said could convince her and so it didn’t take long until
-                            a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged
-                            her into their agency, where they abused her for their.</p>
-                        <div class="count">
-                            <button class="min">-</button>
-                            <button class="number">1</button>
-                            <button class="max">+</button>
-                        </div>
-                        <p class="piece">80 piece available</p>
-                        <div class="cart">
-                            <button class="add"><span>Add to Cart</span></button>
-                            <button class="buy"><span>Buy now</span></button>
-                        </div>
+            <div class="totals">
+                <div class="totals-text">
+                    <h1>Cart Totals</h1>
+                    <div class="subtotal">
+                        <p>Subtotal</p>
+                        <p>$20.60</p>
                     </div>
-
+                    <div class="subtotal">
+                        <p>Delivery</p>
+                        <p>$0.00</p>
+                    </div>
+                    <div class="subtotal">
+                        <p>Discount</p>
+                        <p>$0.00</p>
+                    </div>
+                    <hr>
+                    <div class="subtotal">
+                        <p>TOTAL</p>
+                        <p>$17.60</p>
+                    </div>
 
                 </div>
-                <div class="three-div">
-                    <div class="description">
-                        <p>Description</p>
-                    </div>
-                    <div class="manufacturer">
-                        <p>Manufacturer</p>
-                    </div>
-                    <div class="reviews">
-                        <p>Reviews</p>
-                    </div>
-                </div>
-                <div class="degree-text">
-                    <h1>Bacardi 151 Degree</h1>
-                    <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it
-                        would have been rewritten a thousand times and everything that was left from its origin would be
-                        the word "and" and the Little Blind Text should turn around and return to its own, safe country.
-                        But nothing the copy said could convince her and so it didn’t take long until a few insidious
-                        Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their
-                        agency, where they abused her for their.</p>
-                </div>
+                <button>Proceed to Checkout</button>
             </div>
+           </div>
         </section>
-    </main>
-    <!--              MAIN END                 -->
-    <!--              FOOTER START               -->
-    <footer>
+     </main>
+      <!--              MAIN END                   -->
+
+     <!--              FOOTER START               -->
+     <footer>
         <section id="footer_area">
             <div class="container">
                 <div class="footer-boxs">
@@ -225,5 +250,4 @@
         AOS.init();
     </script>
 </body>
-
 </html>
