--- a/register.html
+++ b/register.html
@@ -58,7 +58,7 @@
                             <li><a href="/products.html">products</a>
                             <li><a href="/blog.html">blog</a></li>
                             <li><a href="/contact.html">contact</a></li>
-                            <li><a href="">cart</a></li>
+                            <li><a href="/cart.html">cart</a></li>
                         </ul>
                     </div>
                     <i class="bi bi-list"></i>
